@@ -298,6 +298,9 @@ class tx_seminars_pi1 extends tx_seminars_templatehelper {
 			case 'countdown':
 				$result = $this->createCountdown();
 				break;
+			case 'category_list':
+				$result = $this->createCategoryList();
+				break;
 			case 'topic_list':
 				// The fallthrough is intended
 				// because createListView() will differentiate later.
@@ -2944,6 +2947,72 @@ class tx_seminars_pi1 extends tx_seminars_templatehelper {
 	}
 
 	/**
+	 * Creates a HTML list of categories.
+	 *
+	 * This list is limited to categories for which there are events in the
+	 * selected time-frame and in the selected sysfolders. Categories for which
+	 * all events are canceled will always be ignored.
+	 *
+	 *
+	 * @return	string		HTML code of the category list or a formatted
+	 * 						message if there are no categories to display
+	 */
+	public function createCategoryList() {
+		$seminarBagBuilder
+			= t3lib_div::makeInstance('tx_seminars_seminarbagbuilder');
+		$seminarBagBuilder->setSourcePages(
+			$this->getConfValueString('pages'),
+			$this->getConfValueInteger('recursive')
+		);
+		$seminarBagBuilder->ignoreCanceledEvents();
+		try {
+			$seminarBagBuilder->setTimeFrame(
+				$this->getConfValueString(
+					'timeframeInList',
+					's_template_special'
+				)
+			);
+		} catch (Exception $exception) {
+			// Ignores the exception because the user will be warned of the
+			// problem by the configuration check.
+		}
+
+		$eventUids = $seminarBagBuilder->build()->getUids();
+
+		$builder = t3lib_div::makeInstance('tx_seminars_categorybagbuilder');
+		$builder->limitToEvents($eventUids);
+		$bag = $builder->build();
+
+		// Only lists categories for which there are events.
+		if (($eventUids != '') && ($bag->getObjectCountWithoutLimit() > 0)) {
+			$allCategories = '';
+			$rowCounter = 0;
+
+			while ($bag->getCurrent()) {
+				$link = $this->createLinkToListViewLimitedByCategory(
+					$bag->getCurrent()->getUid(),
+					$bag->getCurrent()->getTitle()
+				);
+				$this->setMarker('category_title', $link);
+
+				$cssClass = ($rowCounter % 2) ? ' class="listrow-odd"' : '';
+				$this->setMarker('class_category_item', $cssClass);
+
+				$allCategories .= $this->getSubpart('SINGLE_CATEGORY_ITEM');
+				$bag->getNext();
+				$rowCounter ++;
+			}
+
+			$this->setMarker('all_category_items', $allCategories);
+			$result = $this->getSubpart('VIEW_CATEGORIES');
+		} else {
+			$result = $this->getSubpart('VIEW_NO_CATEGORIES');
+		}
+
+		return $result;
+	}
+
+	/**
 	 * Creates a hyperlink with the title $title to the current list view,
 	 * limited to the category provided by the parameter $categoryUid.
 	 *
@@ -2954,7 +3023,9 @@ class tx_seminars_pi1 extends tx_seminars_templatehelper {
 	 * @return	string		link to the list view limited to the given
 	 * 						category or an empty string if there is an error
 	 */
-	private function createLinkToListViewLimitedByCategory($categoryUid, $title) {
+	private function createLinkToListViewLimitedByCategory(
+		$categoryUid, $title
+	) {
 		if ($categoryUid <= 0) {
 			throw new Exception('$categoryUid must be > 0.');
 		}
