@@ -543,3 +543,33 @@
 ###REGISTRATION_DATA_BODY###
 </p>
 <!-- ###REGISTRATION_CONFIRMATION_DATA### -->
+
+<!-- ###VIEW_CATEGORIES### -->
+<div###CLASS_CATEGORYLIST###>
+  <p>###LABEL_WE_OFFER_EVENTS_IN_CATEGORIES###</p>
+  <table summary="">
+    <thead>
+      <tr>
+    	  <th scope="col">###LABEL_CATEGORY###</th>
+      </tr>
+    </thead>
+    <tbody>
+###ALL_CATEGORY_ITEMS###
+    </tbody>
+  </table>
+</div>
+<!-- ###VIEW_CATEGORIES### -->
+
+<!-- ###SINGLE_CATEGORY_ITEM### -->
+      <tr>
+        <td###CLASS_CATEGORY_ITEM###>
+          ###CATEGORY_TITLE###
+        </td>
+      </tr>
+<!-- ###SINGLE_CATEGORY_ITEM### -->
+
+<!-- ###VIEW_NO_CATEGORIES### -->
+<div###CLASS_CATEGORYLIST###>
+  <p>###LABEL_NO_CATEGORIES###</p>
+</div>
+<!-- ###VIEW_NO_CATEGORIES### -->
